--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<H1>HELLO WORD</H1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>yujunjie</title>
+<script>
+function displayDate(){
+	document.getElementById("demo").innerHTML=Date();
+}
+</script>
+</head>
+<body>
+
+<h1>HELLO WORD</h1>
+<p id="demo">这是一个段落</p>
+
+<button type="button" onclick="displayDate()">显示日期</button>
+
+</body>
+</html>
