--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>yujunjie</title>
+    <meta charset="utf-8">
+    <title>YUJUNJIE</title>
 </head>
 <body>
-<h1>HELLO WORD</h1>
+    <h1>HELLO WORD</h1>
+    <a href="./calculator/index.html">CALCULATOR</a>
+    <a href="./stuby/html/index.html">stuby/html</a>
 </body>
 </html>
