--- a/stuby/html/index.html
+++ b/stuby/html/index.html
@@ -1,59 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <title>STUBY/HTML</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/myscript.js"></script>
     <style>
         h1 {
            color: blue; 
         }
+        /*类选择器*/
+        .cssdiv{
+            background-color:aliceblue;
+        }
+        /*id选择器*/
+        #header{
+            font-size: 20px;
+        }
+        /*通用选择器*/
+        *{
+            background-color:#cbf1f5;
+        }
+        /*子元素选择器*/
+        .cssdiv > h1{
+            color:black; 
+        }
+        /*后代选择器*/
+        .cssdiv p{
+            color: brown;
+        }
+        /* 相邻选择器 */
+        .cssdiv > div  h1 + p{
+            background-color: brown;
+        }
+        /* 伪类选择器 */
+        #element:hover{
+            background-color: brown;
+        }
+        .block{
+            background-color: aqua;
+        }
+        .imline{
+            background-color:brown;
+        }
+        .imline-block{
+            width: 100px;
+        }
+
     </style>
+    <script>
+        console.log("hellor world head内联");
+    </script>
 </head>
 <body>
-    <h1>一级标签(使用了内部样式)</h1>
-    <h2 style="color: red;">二级标签(使用了内联样式)</h2>
-    <h3>三级标签(使用了外部css)</h3>
-    <h4>四级标签</h4>
-    <h5>五级标签</h5>
-    <h6>六级标签</h6>
-    <p>段落标签</p>
-    <p>其他样式:<b>加粗</b><i>斜体</i><u>下滑线</u><s>删除线</s></p>
-    <ul>
-        <li>无序列表 1</li>
-        <li>无序列表 2</li>
-        <li>无序列表 3</li>
-    </ul>
-    <ol>
-        <li>有序列表 1</li>
-        <li>有序列表 2</li>
-        <li>有序列表 3</li>
-    </ol>
-    <table border="1">
-        <tr>
-            <th>列标题1</th>
-            <th>列标题2</th>
-            <th>列标题3</th>
-        </tr>
-        <tr>
-            <td>行数据1</td>
-            <td>行数据2</td>
-            <td>行数据3</td>
-        </tr>
-        <tr>
-            <td>行数据1</td>
-            <td>行数据2</td>
-            <td>行数据3</td>
-        </tr>
-    </table>
-    <h1>标签属性</h1>
-    <a href="../../../index.html">主页</a>
-    <br>
-    <a href="../../../index.html" target="_blank">主页 增加打开方式 使用新的</a>
-    <hr>
-    <img src="" alt="无文件" width="100" height="100">
-    <hr>
-
+    <div>
+        <h1>一级标签(使用了内部样式)</h1>
+        <h2 style="color: red;">二级标签(使用了内联样式)</h2>
+        <h3>三级标签(使用了外部css)</h3>
+        <h4>四级标签</h4>
+        <h5>五级标签</h5>
+        <h6>六级标签</h6>
+        <p>段落标签</p>
+        <p>其他样式:<b>加粗</b><i>斜体</i><u>下滑线</u><s>删除线</s></p>
+        <ul>
+            <li>无序列表 1</li>
+            <li>无序列表 2</li>
+            <li>无序列表 3</li>
+        </ul>
+        <ol>
+            <li>有序列表 1</li>
+            <li>有序列表 2</li>
+            <li>有序列表 3</li>
+        </ol>
+        <table border="1">
+            <tr>
+                <th>列标题1</th>
+                <th>列标题2</th>
+                <th>列标题3</th>
+            </tr>
+            <tr>
+                <td>行数据1</td>
+                <td>行数据2</td>
+                <td>行数据3</td>
+            </tr>
+            <tr>
+                <td>行数据1</td>
+                <td>行数据2</td>
+                <td>行数据3</td>
+            </tr>
+        </table>
+        <h1>标签属性</h1>
+        <a href="../../../index.html">主页</a>
+        <br>
+        <a href="../../../index.html" target="_blank">主页 增加打开方式 使用新的</a>
+        <hr>
+        <img src="" alt="无文件" width="100" height="100">
+        <hr>
+    </div>
     <div class="nav">
         <a href="#">链接1</a>
         <a href="#">链接2</a>
@@ -91,7 +134,67 @@
         <input type="submit" value="提交">
     </form>
     <hr>
-    <h1>选择器</h1>
-    
+    <h1>CSS选择器</h1>
+    <div class="cssdiv">
+        <h1 id="header">这是一个ID选择器</h1>
+        <p>子元素</p>
+        <div>
+            <p>后代选择器</p>
+            <p>上</p>
+            <h1>相邻选择器</h1>
+            <p>下</p>
+            <h1 id="element">伪类选择器 </h1>
+        </div>
+    </div>
+    <div class="block">这是一个块级元素</div>
+    <span class="imline">这是一个行内元素</span>
+    <img src="#" alt="行内块元素" class="inline-block">
+    <div style="display: inline;">这是一个转换成行内元素的div</div>\
+    <div>
+        <h1>javascript</h1>
+        <script>
+            console.log("hellor world boyb内联");
+        </script>
+        <button onclick="click_event()">点击按钮</button>
+        <input type="text" onfocus="focus_event()" onblur="blur_event()">
+        <div id="box1">ID选择器</div>
+        <div class="box2">类选择器</div>
+        <div>普通的div</div>
+        <script>
+            function click_event(){
+                alert("点击了按钮");
+            }
+            function focus_event(){
+                console.log("获得焦点");
+            }
+            function blur_event(){
+                console.log("失去焦点");
+            }
+            var elemet_id = document.getElementById('box1');
+            console.log(elemet_id); 
+            var elemet_class = document.getElementsByClassName('box2')[0];
+            console.log(elemet_class); 
+            var elemet_tag = document.getElementsByTagName('div')[10];
+            console.log(elemet_tag); 
+
+            elemet_id.innerHTML = "修改ID内容" ;
+            elemet_class.innerText = "修改class内容";
+            elemet_tag.style.color = 'red';
+            elemet_tag.style.fontSize = '20px';
+
+            //DOM事件
+            var button_element = document.getElementsByTagName('button')[0];
+            console.log(button_element);
+
+            button_element.onclick = function (){
+                console.log("DOM 属性触发");
+            }
+
+            button_element.addEventListener('click',function (){
+                console.log("addEventListener 属性触发");
+            })
+
+        </script>
+    </div>
 </body>
 </html>
