--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,8 +3,68 @@
     <head>
         <meta charset="utf-8">
         <title>YUJUNJIE/CALCULATOR</title>
+        <style>
+            table{
+                /* border-collapse: collapse; */
+                text-align: center;
+                width: 100%;
+            }
+            td {
+                border-style: solid;
+            }
+            #outshow{
+                text-align: right;
+            }
+        </style>
     </head>
     <body>
         <h1 style="text-align: center;">CALCULATOR</h1>
+        <p id="outshow">0</p>
+        <div>
+            <table>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
