--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>HELLO WORD</h1>
     <a href="./calculator/index.html">CALCULATOR</a>
     <a href="./stuby/html/index.html">stuby/html</a>
+    <a href="./time/index.html">time</a>
 </body>
 </html>
