--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YUJUNJIE</title>
 </head>
 <body>
@@ -9,5 +10,7 @@
     <a href="./calculator/index.html">CALCULATOR</a>
     <a href="./stuby/html/index.html">stuby/html</a>
     <a href="./time/index.html">time</a>
+    <a href="./serial_port/index.html"> 串口助手</a>
+    <a href="./camera/index.html">相机</a>
 </body>
 </html>
