--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>HELLO WORD</h1>
-    <a href="./calculator/index.html">CALCULATOR</a>
+    <a href="./calculator/index.html">计算器</a>
     <a href="./stuby/html/index.html">stuby/html</a>
     <a href="./time/index.html">time</a>
     <a href="./serial_port/index.html"> 串口助手</a>
